Kaggle Notebook | Exercise: Machine Learning Competitions | Version 5

--- a/exercise-machine-learning-competitions.ipynb
+++ b/exercise-machine-learning-competitions.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0f74cc0",
+   "id": "97bbc53a",
    "metadata": {
     "papermill": {
-     "duration": 0.006641,
-     "end_time": "2024-11-10T15:40:41.460947",
+     "duration": 0.005676,
+     "end_time": "2024-11-10T15:57:08.085009",
      "exception": false,
-     "start_time": "2024-11-10T15:40:41.454306",
+     "start_time": "2024-11-10T15:57:08.079333",
      "status": "completed"
     },
     "tags": []
@@ -21,13 +21,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c233f094",
+   "id": "87331244",
    "metadata": {
     "papermill": {
-     "duration": 0.004898,
-     "end_time": "2024-11-10T15:40:41.471473",
+     "duration": 0.004782,
+     "end_time": "2024-11-10T15:57:08.095122",
      "exception": false,
-     "start_time": "2024-11-10T15:40:41.466575",
+     "start_time": "2024-11-10T15:57:08.090340",
      "status": "completed"
     },
     "tags": []
@@ -43,19 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0cf2a7bd",
+   "id": "5a220595",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-10T15:40:41.483828Z",
-     "iopub.status.busy": "2024-11-10T15:40:41.483333Z",
-     "iopub.status.idle": "2024-11-10T15:40:42.445912Z",
-     "shell.execute_reply": "2024-11-10T15:40:42.444679Z"
+     "iopub.execute_input": "2024-11-10T15:57:08.106775Z",
+     "iopub.status.busy": "2024-11-10T15:57:08.106332Z",
+     "iopub.status.idle": "2024-11-10T15:57:09.084157Z",
+     "shell.execute_reply": "2024-11-10T15:57:09.082918Z"
     },
     "papermill": {
-     "duration": 0.971936,
-     "end_time": "2024-11-10T15:40:42.448645",
+     "duration": 0.986658,
+     "end_time": "2024-11-10T15:57:09.086876",
      "exception": false,
-     "start_time": "2024-11-10T15:40:41.476709",
+     "start_time": "2024-11-10T15:57:08.100218",
      "status": "completed"
     },
     "tags": []
@@ -76,13 +76,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cb01e12",
+   "id": "55e356fb",
    "metadata": {
     "papermill": {
-     "duration": 0.005015,
-     "end_time": "2024-11-10T15:40:42.459088",
+     "duration": 0.004938,
+     "end_time": "2024-11-10T15:57:09.097288",
      "exception": false,
-     "start_time": "2024-11-10T15:40:42.454073",
+     "start_time": "2024-11-10T15:57:09.092350",
      "status": "completed"
     },
     "tags": []
@@ -94,19 +94,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "af5b2e2f",
+   "id": "732a2f83",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-10T15:40:42.471417Z",
-     "iopub.status.busy": "2024-11-10T15:40:42.470826Z",
-     "iopub.status.idle": "2024-11-10T15:40:44.854577Z",
-     "shell.execute_reply": "2024-11-10T15:40:44.852959Z"
+     "iopub.execute_input": "2024-11-10T15:57:09.109918Z",
+     "iopub.status.busy": "2024-11-10T15:57:09.109228Z",
+     "iopub.status.idle": "2024-11-10T15:57:11.504266Z",
+     "shell.execute_reply": "2024-11-10T15:57:11.502952Z"
     },
     "papermill": {
-     "duration": 2.392905,
-     "end_time": "2024-11-10T15:40:44.857175",
+     "duration": 2.404349,
+     "end_time": "2024-11-10T15:57:11.506970",
      "exception": false,
-     "start_time": "2024-11-10T15:40:42.464270",
+     "start_time": "2024-11-10T15:57:09.102621",
      "status": "completed"
     },
     "tags": []
@@ -153,13 +153,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20222f03",
+   "id": "3e336db2",
    "metadata": {
     "papermill": {
-     "duration": 0.005032,
-     "end_time": "2024-11-10T15:40:44.867987",
+     "duration": 0.005174,
+     "end_time": "2024-11-10T15:57:11.517756",
      "exception": false,
-     "start_time": "2024-11-10T15:40:44.862955",
+     "start_time": "2024-11-10T15:57:11.512582",
      "status": "completed"
     },
     "tags": []
@@ -175,19 +175,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f6d4cbf7",
+   "id": "9054c832",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-10T15:40:44.880078Z",
-     "iopub.status.busy": "2024-11-10T15:40:44.879639Z",
-     "iopub.status.idle": "2024-11-10T15:40:45.567853Z",
-     "shell.execute_reply": "2024-11-10T15:40:45.566528Z"
+     "iopub.execute_input": "2024-11-10T15:57:11.530889Z",
+     "iopub.status.busy": "2024-11-10T15:57:11.530004Z",
+     "iopub.status.idle": "2024-11-10T15:57:12.161107Z",
+     "shell.execute_reply": "2024-11-10T15:57:12.160144Z"
     },
     "papermill": {
-     "duration": 0.697555,
-     "end_time": "2024-11-10T15:40:45.570668",
+     "duration": 0.640222,
+     "end_time": "2024-11-10T15:57:12.163346",
      "exception": false,
-     "start_time": "2024-11-10T15:40:44.873113",
+     "start_time": "2024-11-10T15:57:11.523124",
      "status": "completed"
     },
     "tags": []
@@ -217,13 +217,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb53dbf9",
+   "id": "3bdcf29e",
    "metadata": {
     "papermill": {
-     "duration": 0.005183,
-     "end_time": "2024-11-10T15:40:45.581603",
+     "duration": 0.00573,
+     "end_time": "2024-11-10T15:57:12.174594",
      "exception": false,
-     "start_time": "2024-11-10T15:40:45.576420",
+     "start_time": "2024-11-10T15:57:12.168864",
      "status": "completed"
     },
     "tags": []
@@ -235,19 +235,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4eeffcd1",
+   "id": "923e2280",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-10T15:40:45.595192Z",
-     "iopub.status.busy": "2024-11-10T15:40:45.594510Z",
-     "iopub.status.idle": "2024-11-10T15:40:45.641630Z",
-     "shell.execute_reply": "2024-11-10T15:40:45.640622Z"
+     "iopub.execute_input": "2024-11-10T15:57:12.187256Z",
+     "iopub.status.busy": "2024-11-10T15:57:12.186425Z",
+     "iopub.status.idle": "2024-11-10T15:57:12.235597Z",
+     "shell.execute_reply": "2024-11-10T15:57:12.234703Z"
     },
     "papermill": {
-     "duration": 0.057173,
-     "end_time": "2024-11-10T15:40:45.644327",
+     "duration": 0.058388,
+     "end_time": "2024-11-10T15:57:12.238180",
      "exception": false,
-     "start_time": "2024-11-10T15:40:45.587154",
+     "start_time": "2024-11-10T15:57:12.179792",
      "status": "completed"
     },
     "tags": []
@@ -270,13 +270,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "340ef0b7",
+   "id": "9239d444",
    "metadata": {
     "papermill": {
-     "duration": 0.006692,
-     "end_time": "2024-11-10T15:40:45.656598",
+     "duration": 0.005171,
+     "end_time": "2024-11-10T15:57:12.249003",
      "exception": false,
-     "start_time": "2024-11-10T15:40:45.649906",
+     "start_time": "2024-11-10T15:57:12.243832",
      "status": "completed"
     },
     "tags": []
@@ -288,19 +288,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56393962",
+   "id": "c62ec1de",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-10T15:40:45.670543Z",
-     "iopub.status.busy": "2024-11-10T15:40:45.670105Z",
-     "iopub.status.idle": "2024-11-10T15:40:45.675710Z",
-     "shell.execute_reply": "2024-11-10T15:40:45.674223Z"
+     "iopub.execute_input": "2024-11-10T15:57:12.262665Z",
+     "iopub.status.busy": "2024-11-10T15:57:12.261871Z",
+     "iopub.status.idle": "2024-11-10T15:57:12.266487Z",
+     "shell.execute_reply": "2024-11-10T15:57:12.265442Z"
     },
     "papermill": {
-     "duration": 0.01604,
-     "end_time": "2024-11-10T15:40:45.678259",
+     "duration": 0.013238,
+     "end_time": "2024-11-10T15:57:12.268618",
      "exception": false,
-     "start_time": "2024-11-10T15:40:45.662219",
+     "start_time": "2024-11-10T15:57:12.255380",
      "status": "completed"
     },
     "tags": []
@@ -314,13 +314,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c18846de",
+   "id": "827d1883",
    "metadata": {
     "papermill": {
-     "duration": 0.005261,
-     "end_time": "2024-11-10T15:40:45.689213",
+     "duration": 0.005181,
+     "end_time": "2024-11-10T15:57:12.279441",
      "exception": false,
-     "start_time": "2024-11-10T15:40:45.683952",
+     "start_time": "2024-11-10T15:57:12.274260",
      "status": "completed"
     },
     "tags": []
@@ -334,19 +334,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b2de80cf",
+   "id": "5f00f7d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-10T15:40:45.702605Z",
-     "iopub.status.busy": "2024-11-10T15:40:45.701772Z",
-     "iopub.status.idle": "2024-11-10T15:40:46.096325Z",
-     "shell.execute_reply": "2024-11-10T15:40:46.095201Z"
+     "iopub.execute_input": "2024-11-10T15:57:12.292143Z",
+     "iopub.status.busy": "2024-11-10T15:57:12.291221Z",
+     "iopub.status.idle": "2024-11-10T15:57:12.662957Z",
+     "shell.execute_reply": "2024-11-10T15:57:12.661868Z"
     },
     "papermill": {
-     "duration": 0.404349,
-     "end_time": "2024-11-10T15:40:46.099149",
+     "duration": 0.381031,
+     "end_time": "2024-11-10T15:57:12.665780",
      "exception": false,
-     "start_time": "2024-11-10T15:40:45.694800",
+     "start_time": "2024-11-10T15:57:12.284749",
      "status": "completed"
     },
     "tags": []
@@ -361,14 +361,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a58a04ed",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-10T15:57:12.679365Z",
+     "iopub.status.busy": "2024-11-10T15:57:12.678329Z",
+     "iopub.status.idle": "2024-11-10T15:57:13.053750Z",
+     "shell.execute_reply": "2024-11-10T15:57:13.052686Z"
+    },
+    "papermill": {
+     "duration": 0.384988,
+     "end_time": "2024-11-10T15:57:13.056423",
+     "exception": false,
+     "start_time": "2024-11-10T15:57:12.671435",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission file saved as 'submission.csv' in /kaggle/working\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming test_data and test_preds are already defined\n",
+    "# For example:\n",
+    "# test_data = pd.read_csv('/path/to/test_data.csv')  # Load test data if needed\n",
+    "# test_preds = model.predict(test_data)              # Generate predictions\n",
+    "\n",
+    "# Create the submission DataFrame\n",
+    "output = pd.DataFrame({\n",
+    "    'Id': test_data.Id,      # Replace 'Id' with the actual column name in your test dataset if different\n",
+    "    'SalePrice': test_preds  # Replace 'SalePrice' with the target variable name if different\n",
+    "})\n",
+    "\n",
+    "# Save the DataFrame to a CSV file in the Kaggle working directory\n",
+    "output.to_csv('/kaggle/working/submission.csv', index=False)\n",
+    "print(\"Submission file saved as 'submission.csv' in /kaggle/working\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b2cc0dcc",
+   "id": "6cd8dfbb",
    "metadata": {
     "papermill": {
-     "duration": 0.006064,
-     "end_time": "2024-11-10T15:40:46.110896",
+     "duration": 0.006033,
+     "end_time": "2024-11-10T15:57:13.068485",
      "exception": false,
-     "start_time": "2024-11-10T15:40:46.104832",
+     "start_time": "2024-11-10T15:57:13.062452",
      "status": "completed"
     },
     "tags": []
@@ -442,13 +490,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca94851f",
+   "id": "3ddeeb1a",
    "metadata": {
     "papermill": {
-     "duration": 0.005271,
-     "end_time": "2024-11-10T15:40:46.121779",
+     "duration": 0.005081,
+     "end_time": "2024-11-10T15:57:13.079284",
      "exception": false,
-     "start_time": "2024-11-10T15:40:46.116508",
+     "start_time": "2024-11-10T15:57:13.074203",
      "status": "completed"
     },
     "tags": []
@@ -497,14 +545,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.520042,
-   "end_time": "2024-11-10T15:40:46.849892",
+   "duration": 8.587141,
+   "end_time": "2024-11-10T15:57:13.706471",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-10T15:40:38.329850",
+   "start_time": "2024-11-10T15:57:05.119330",
    "version": "2.6.0"
   }
  },
